# askrepo

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  deno.json  mod.ts
.cursor/: environment.json
.github/workflows/: ci.yml  publish.yml
src/: file_utils.rs  file_utils.ts  google_api.rs  google_api.ts  logger.ts  main.rs  main.ts  types.d.ts  vercel_ai_sdk.ts
src/cli/: parseAndValidateArgs.ts
src/config/: defaults.ts  models.ts
test/: file_utils.test.ts  google_api.test.ts  vercel_ai_sdk.test.ts
